--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.4"
   }
 }
